--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,8 @@ Author: Noerwald v/ Camilla Nørgaard og Maja Wennwewald
   gap: 20px;
 }
 
-@media screen and (min-width: 951px), (min-width: 672px) and (max-width: 950px) {
+@media screen and (min-width: 951px),
+(min-width: 672px) and (max-width: 950px) {
   .footer-flex-row {
     flex-direction: row;
     margin: 0;
@@ -193,7 +194,7 @@ header {
 
 .page-margin {
   width: 85%;
-  margin: auto;
+  margin: 10% auto;
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
@@ -205,6 +206,7 @@ header {
 @media screen and (min-width: 951px) {
   .page-margin {
     width: 80%;
+    margin: 5% auto;
   }
 }
 
@@ -253,6 +255,7 @@ header {
   --green: #37512e;
   --box-shadow: 0px 3px 8px 0px rgb(0 0 0 / 40%);
   --grey-hover: #bcbcbc;
+  --black-transparent: #1c1c1cdb;
   /* --------------------------------- FONTS ------------------------------- */
   --primary_font: "Arial";
   --secondary_font: "Crimson Text", serif;
@@ -463,19 +466,19 @@ button {
 }
 
 /* --------------------------------- HOVER ------------------------------- */
-.primary-btn:hover > .button-rightpart-primary,
-.primary-btn:hover > .button-leftpart-primary,
-.primary-btn:hover > .rightpart-button-user,
-.primary-btn:hover > .leftpart-button-user {
+.primary-btn:hover>.button-rightpart-primary,
+.primary-btn:hover>.button-leftpart-primary,
+.primary-btn:hover>.rightpart-button-user,
+.primary-btn:hover>.leftpart-button-user {
   background-color: var(--gold-hover);
   border: 2px solid var(--gold-hover);
   cursor: pointer;
 }
 
-.secondary-btn:hover > .button-rightpart-secondary,
-.secondary-btn:hover > .button-leftpart-secondary,
-.secondary-btn:hover > .rightpart-button-back,
-.secondary-btn:hover > .leftpart-button-back {
+.secondary-btn:hover>.button-rightpart-secondary,
+.secondary-btn:hover>.button-leftpart-secondary,
+.secondary-btn:hover>.rightpart-button-back,
+.secondary-btn:hover>.leftpart-button-back {
   background-color: var(--gold);
   border: 2px solid var(--gold);
   cursor: pointer;
@@ -883,7 +886,9 @@ button {
   position: relative;
 }
 
-@media screen and (min-width: 672px) and (max-width: 950px), (min-width: 951px) {
+@media screen and (min-width: 672px) and (max-width: 950px),
+(min-width: 951px) {
+
   .opening-hours-section,
   .about-cover-section {
     height: 350px;
@@ -1086,24 +1091,19 @@ button {
 .product_card {
   display: grid;
   grid-template-columns: 1fr;
-  padding: 5%;
-  gap: 2%;
-  margin-bottom: 530px;
+  gap: 20px;
+  margin: 20px auto 0 auto;
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
   .product_card {
     grid-template-columns: 1fr 1fr;
-    padding: 2%;
-    margin-bottom: 140px;
   }
 }
 
 @media screen and (min-width: 951px) {
   .product_card {
     grid-template-columns: 1fr 1fr;
-    padding: 2%;
-    margin-bottom: 220px;
   }
 }
 
@@ -1111,6 +1111,54 @@ button {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  width: 100%;
+  height: 250px;
+  position: relative;
+  box-shadow: var(--box-shadow);
+}
+
+.productdetails {
+  display: none;
+}
+
+.product_card_inner_background {
+  transition: 0.5s;
+  width: 100%;
+  height: 20%;
+  background-color: var(--black-transparent);
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.product_card_inner:hover>.product_card_inner_background>.productdetails {
+  display: block;
+}
+
+.product_card_inner:hover>.product_card_inner_background {
+  width: 100%;
+  height: 100%;
+}
+
+.product_description {
+  text-align: center;
+  padding: 15px 5%;
+}
+
+.goldbutton {
+  width: 165px;
+  height: auto;
+  padding: 4px;
+  border: none;
+  font-family: var(--primary_font);
+  border-radius: 10px;
+  background: var(--gold-gradient);
+  display: block;
+
 }
 
 /* .product-americancrew::before {
@@ -1173,6 +1221,7 @@ button {
   width: 100%;
   height: 1680px;
 }
+
 .haircolor {
   grid-area: haircolor;
 }
@@ -1217,4 +1266,5 @@ button {
   display: flex;
   flex: 1 0 50%;
 }
+
 /* ======================================================================= */
