--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,130 +358,42 @@ button {
   height: auto;
   background-color: transparent;
   display: flex;
-  /* justify-content: space-between; */
   gap: 5px;
   padding: 0;
   border: none;
-  color: var(--white);
   font-family: var(--primary_font);
-  font-size: 16px;
-}
-
-#primary-btn,
-#secondary-btn {
   cursor: pointer;
 }
 
-.button-leftpart-primary,
-.leftpart-button-user {
-  border-radius: 8px 0px 0px 8px;
-  border: 2px solid var(--gold);
-  left: 0;
-  width: 130px;
-  background-color: var(--gold);
-  height: 26px;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
-
-.leftpart-button-user {
-  width: 85px;
-}
-
-.button-rightpart-primary,
-.rightpart-button-user {
-  border-radius: 0px 8px 8px 0px;
-  border: 2px solid var(--gold);
-  right: 0;
-  width: 30px;
-  background-color: var(--gold);
-  height: 26px;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  font-size: 20px;
-}
-
-.button-leftpart-secondary {
+.button-leftpart-primary {
   border-radius: 8px 0px 0px 8px;
   left: 0;
   width: 130px;
-  border: 2px solid var(--gold);
+  background: var(--gold-gradient);
   height: 26px;
   align-items: center;
   display: flex;
   justify-content: center;
+  transition: 1s;
 }
 
-.button-rightpart-secondary {
-  border: 2px solid var(--gold);
+.button-rightpart-primary {
   border-radius: 0px 8px 8px 0px;
   right: 0;
   width: 30px;
+  background: var(--gold-gradient);
   height: 26px;
   align-items: center;
   display: flex;
   justify-content: center;
   font-size: 20px;
-}
-
-.back-btn-profile,
-.back-btn,
-.user-btn {
-  width: 120px !important;
-}
-
-@media screen and (min-width: 951px) {
-  .back-btn-profile {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-  }
-}
-
-.leftpart-button-back {
-  background-color: transparent;
-  border: 2px solid var(--gold);
-  border-radius: 8px 0px 0px 8px;
-  left: 0;
-  width: 30px;
-  height: 26px;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  font-size: 20px;
-}
-
-.rightpart-button-back {
-  border-radius: 0px 8px 8px 0px;
-  right: 0;
-  width: 85px;
-  background-color: none;
-  border: 2px solid var(--gold);
-  height: 26px;
-  align-items: center;
-  display: flex;
-  justify-content: center;
+  transition: 1s;
 }
 
 /* --------------------------------- HOVER ------------------------------- */
 .primary-btn:hover>.button-rightpart-primary,
-.primary-btn:hover>.button-leftpart-primary,
-.primary-btn:hover>.rightpart-button-user,
-.primary-btn:hover>.leftpart-button-user {
-  background-color: var(--gold-hover);
-  border: 2px solid var(--gold-hover);
-  cursor: pointer;
-}
-
-.secondary-btn:hover>.button-rightpart-secondary,
-.secondary-btn:hover>.button-leftpart-secondary,
-.secondary-btn:hover>.rightpart-button-back,
-.secondary-btn:hover>.leftpart-button-back {
-  background-color: var(--gold);
-  border: 2px solid var(--gold);
-  cursor: pointer;
+.primary-btn:hover>.button-leftpart-primary {
+  opacity: 0.5;
 }
 
 /* -------------------------------- ALIGNMENT ---------------------------- */
