--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1233,5 +1233,6 @@ button {
   }
 }
 /* ======================================================================= */
+/* ========================== XXXXX PAGE ============================== */
 
 /* ======================================================================= */
