--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1281,7 +1281,8 @@ button {
   width: 100%;
   height: 735px;
   opacity: 70%;
-  background-image: url(../images/contact-hero-left.jpg);
+  /* background-image: url(../images/contact-hero-left.jpg); */
+  background-image: url(../images/2contact-hero-left.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-color: var(--white);
@@ -1311,7 +1312,8 @@ button {
   width: 100%;
   right: 0;
   height: 675px;
-  opacity: 50%;
+  /* opacity: 50%; */
+  opacity: 70%;
   background-color: var(--primary-black);
   -webkit-clip-path: polygon(0 0%, 130% 0%, 100% 69%, 0 52%);
   clip-path: polygon(0 0%, 130% 0%, 100% 69%, 0 52%);
