--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ h3 {
 h4 {
   font-family: var(--primary_font);
   font-weight: 100;
-  font-size: 16px;
+  font-size: 14px;
   color: var(--white);
 }
 
@@ -544,17 +544,24 @@ button {
 
 /* ======================================================================= */
 /* ================================ FOOTER =============================== */
-
-/* .flex-row {
-  display: flex;
-  flex-direction: row;
+/*---------------------*/
+.footer-background {
+  height: 275px;
+  background-color: var(--primary-black);
 }
 
-.flex-col {
-  display: flex;
-  flex-direction: column;
-} */
-/*---------------------*/
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .footer-background {
+    height: 130px;
+  }
+}
+
+@media screen and (min-width: 951px) {
+  .footer-background {
+    height: 140px;
+  }
+}
+
 .footer-grid {
   display: grid;
   grid-template-columns: 1fr;
@@ -565,8 +572,24 @@ button {
     "footer-links"
     "footer-copyright";
   align-items: center;
-  text-align: left;
-  height: 270px;
+  text-align: center;
+  height: 240px;
+  padding: 20px 30px 0 30px;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .footer-grid {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+      "footer-logo footer-links"
+      "footer-copyright footer-copyright";
+    padding: 0;
+    width: 90%;
+    margin: auto;
+    height: 100px;
+    padding-top: 20px;
+  }
 }
 
 @media screen and (min-width: 951px) {
@@ -578,24 +601,7 @@ button {
     width: 80%;
     margin: auto;
     height: 130px;
-  }
-}
-
-.footer-logo {
-  padding-left: 30px;
-}
-
-@media screen and (min-width: 951px) {
-  .footer-logo {
-    padding: 0;
-  }
-}
-@media screen and (min-width: 951px) {
-  .footer-links {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 0;
+    padding: 0px;
   }
 }
 
@@ -604,50 +610,60 @@ button {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding-left: 30px;
+  padding: 20px 0;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .footer-links {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0;
+    gap: 20px;
+  }
 }
 
 @media screen and (min-width: 951px) {
   .footer-links {
-    display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding: 0;
+    gap: 0px;
   }
 }
 
+.footer-copyright {
+  grid-area: footer-copyright;
+}
+
 .footer-copyright h4 {
-  text-align: center;
-  font-size: 14px;
   background: var(--gold-gradient);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-size: 12px;
 }
 
 @media screen and (min-width: 951px) {
   .footer-copyright h4 {
+    font-size: 14px;
     text-align: right;
-  }
-}
-
-.footer-background {
-  height: 290px;
-  background-color: var(--primary-black);
-}
-
-@media screen and (min-width: 951px) {
-  .footer-background {
-    height: 140px;
   }
 }
 
 .footer-logo {
   width: 30px;
+  margin: auto;
 }
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .footer-logo {
+    width: 35px;
+    margin: 0;
+  }
+}
+
 @media screen and (min-width: 951px) {
   .footer-logo {
     margin: 0;
-    width: 50px;
+    width: 45px;
   }
 }
 
